# clab

./: CMakeLists.txt  README.md
src/lib/: CMakeLists.txt  clock.c  clock.h  list.c  list.h  map.c  map.h  math.c  math.h  random.c  random.h  sort.c  sort.h  stack.c  stack.h  temp.c  temp.h  text.c  text.h  time.c
src/main/: CMakeLists.txt  application.c  chcount.c  clock.c  encode.c  exec.c  file.c  floppy.c  fork.c  malloc.c  nmap.c  read.c  server.c  socket.c  struct.c  swap.c  thread.c  write.c
src/test/: CMakeLists.txt  clablib_test.c  free_test.c  list_test.c  random_test.c  test_suite.c
src/unito/: CMakeLists.txt  introduzione.c  io.c  puntatori.c  struct_ricorsive.c  strutture.c  vettori.c
