#
#        Copyright (c) 2008 Marco Merli <yohji@marcomerli.net>
#
#        This program is free software; you can redistribute it and/or modify
#        it under the terms of the GNU General Public License as published by
#        the Free Software Foundation; either version 2 of the License, or
#        (at your option) any later version.
#
#        This program is distributed in the hope that it will be useful,
#        but WITHOUT ANY WARRANTY; without even the implied warranty of
#        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#        GNU General Public License for more details.
#
#        You should have received a copy of the GNU General Public License
#        along with this program; if not, write to the Free Software Foundation,
#        Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#


ADD_DEFINITIONS(-Wall -O2)

ADD_EXECUTABLE(introduzione introduzione.c)
ADD_EXECUTABLE(vettori vettori.c)
ADD_EXECUTABLE(puntatori puntatori.c)
ADD_EXECUTABLE(strutture strutture.c)
ADD_EXECUTABLE(struct_ricorsive struct_ricorsive.c)
ADD_EXECUTABLE(io io.c)
